--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^2.0.3",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
+    "lucide": "^0.358.0",
     "lucide-react": "^0.356.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
