--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.14",
     "lucide": "^0.358.0",
     "lucide-react": "^0.356.0",
     "next": "^14.1.3",
